# TestAdmob

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  main.cpp  main.qml
android/: AndroidManifest.xml  build.gradle
android/res/values/: styles.xml
docs/: code-standards.md  codebase-summary.md  deployment-guide.md  project-overview-pdr.md  project-roadmap.md  system-architecture.md
docs/design-system/: design-principles.md
